--- a/index.html
+++ b/index.html
@@ -1,41 +1,1 @@
-三中三<br>
-
-1-2-3<br>
-
-4-5-6<br>
-
-7-8-9<br>
-
-10-11-12<br>
-
-13-14-15<br>
-
-16-17-18<br>
-
-19-20-21<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-4-5-6<br>
-
-7-8-9
+三中三<br>1-2-3<br>4-5-6<br>7-8-9<br>10-11-12<br>13-14-15<br>16-17-18<br>19-20-21<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>7-8-9
