--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>JS Bin</title>
+  <link rel="icon" type="image/x-ico" href="./image/icon.ico" />
+<meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
+    />
+</head>
+<body>
 三中三<br>1-2-3<br>4-5-6<br>7-8-9<br>10-11-12<br>13-14-15<br>16-17-18<br>19-20-21<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>7-8-9
+</body>
+</html>
