--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <heml lang"en">
  <style>
  p{
-   font-size:80px
+   font-size:80px;
  }
  </style>
 <body>
-<p>三中三<br>1-2-3  4-5-6  7-8-9  10-11-12  13-14-15  16-17-18  19-20-21  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  7-8-9 </p>
+<p> 三中三<br>1-2-3  4-5-6  7-8-9  10-11-12  13-14-15  16-17-18  19-20-21  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  7-8-9 </p>
 </body>
 </html>
