--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <style type="text/css">
 /* 最简单的实现禁止复制的方法，采用css方式禁止文字选择，当然这只兼容webkit内核浏览器 */
 * { -webkit-user-select: none; }
-p {font-family: 'Microsoft Yahei';font-size: 28px;}
+p {font-family: 'Microsoft Yahei';font-size: 50px;}
 input {width: 80%; padding: 10px 20px;}
 </style>
 <body>
-<p> 三中三<br>1-2-3  4-5-6  7-8-9  10-11-12  13-14-15  16-17-18  19-20-21  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  7-8-9 </p>
+<p> 三中三个人心水，错对勿怪<br>1-2-3  4-5-6  7-8-9  10-11-12  13-14-15  16-17-18  19-20-21  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  4-5-6  7-8-9 </p>
 </body>
 </html>
