--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ p {font-family: 'Microsoft Yahei';font-size: 50px;}
 input {width: 80%; padding: 10px 20px;}
 </style>
 <body>
-<h1><p> 三中三（个人心水，错对勿怪）<br>12-3<br>4-5-6<br>7-8-9<br>10-11-12<br>13-14-15<br>16-17-18<br>19-20-21<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>7-8-9 </p></h1>
+<p><h1>三中三（个人心水，错对勿怪）<br>12-3<br>4-5-6<br>7-8-9<br>10-11-12<br>13-14-15<br>16-17-18<br>19-20-21<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>7-8-9</h1></p>
 </body>
 </html>
