--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <style type="text/css">
 /* 最简单的实现禁止复制的方法，采用css方式禁止文字选择，当然这只兼容webkit内核浏览器 */
 * { -webkit-user-select: none; }
-p {font-family: 'Microsoft Yahei';font-size: 50px;}
+p {font-family: 'SimSun';font-size: 50px;}
 input {width: 80%; padding: 10px 20px;}
 </style>
 <body>
-<p><h2>三中三（个人心水，错对勿怪）<br>12-3<br>4-5-6<br>7-8-9<br>10-11-12<br>13-14-15<br>16-17-18<br>19-20-21<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>7-8-9</h2></p>
+<p>三中三（个人心水，错对勿怪）<br>12-3<br>4-5-6<br>7-8-9<br>10-11-12<br>13-14-15<br>16-17-18<br>19-20-21<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>7-8-9</p>
 </body>
 </html>
