--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ p {font-family:"SimSun";font-size: 60px;}
 input {width: 80%; padding: 10px 20px;}
 </style>
 <body>
-<p>三中三（个人心水，错对勿怪）<br>12-3<br>4-5-6<br>7-8-9<br>10-11-12<br>13-14-15<br>16-17-18<br>19-20-21<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>4-5-6<br>7-8-9</p>
+<p>三中三（个人心水，错对勿怪）<br>28-27-06<br>04-45-26<br>17-38-29<br>10-11-12<br>13-14-15<br>16-17-18<br>19-20-21<br>24-45-26<br>34-25-46<br>14-45-26<br>14-15-26<br>14-45-26<br>34-45-26<br>14-45-26<br>14-45-26<br>14-25-36<br>4-5-6<br>14-05-46<br>14-15-26<br>17-48-29</p>
 </body>
 </html>
