--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<heml lang"en">
+<html lang"en">
 <style type="text/css">
 /* 最简单的实现禁止复制的方法，采用css方式禁止文字选择，当然这只兼容webkit内核浏览器 */
 * { -webkit-user-select: none; }
