--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html> ==$0
-<html style="font-size: 40px;"><head>
+<!DOCTYPE html>
+<html style="font-size: 55.2px;"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/jquery.min.js"></script>
@@ -214,7 +214,7 @@
 </head>
 <body onload="loadedjs()" style="font-size: 12px;">
 <div id="wrapper">
-    <div id="scroller" style="transform-origin: 0px 0px; transition-timing-function: cubic-bezier(0.1, 0.57, 0.1, 1); transition-duration: 0ms; transform: translate(0px, -100px) scale(1) translateZ(0px);">
+    <div id="scroller" style="transform-origin: 0px 0px; transition-timing-function: cubic-bezier(0.1, 0.57, 0.1, 1); transition-duration: 0ms; transform: translate(0px, 0px) scale(1) translateZ(0px);">
         <div class="container">
             <div class="time">
                 <table>
