--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <heml lang"en">
+<head>
+<meta name="viewport"content="width=device-width,user-scalable=yes,initial-scale=0.3,maxmum-scale=1.0,minimum-scale=0.3">
+</head>
     <style>
         html, body {
             height: 100%
