--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/jquery.min.js"></script>
     <script src="//res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
+    <title>新奥061期</title>
+    <script>
+        wx.config({
+            debug: false
+            , appId: 'wx549a5d857e4a095a'
+            , timestamp: '1709373562'
+            , nonceStr: 'ufKakE2OZQ99ZbvH'
+            , signature: '99eca304c3caa1ba6d56e0afbefdb1d702eb624d'
+            , jsApiList: ['updateAppMessageShareData', 'updateTimelineShareData']
+        });
+
+        wx.ready(function () {
+            wx.updateAppMessageShareData({
+                title: '新奥061期'
+                , desc: '三中三：03-04-11\r\n三中三：11-34-39\r\n聊天记录'
+                , link: 'http://t.20313.cn/index/wechat?id=3583'
+                , imgUrl: 'http://t.20313.cn/image/white.jpg',
+            })
+
+            wx.updateTimelineShareData({
+                title: '新奥061期'
+                , link: 'http://t.20313.cn/index/wechat?id=3583'
+                , imgUrl: 'http://t.20313.cn/image/white.jpg',
+            })
+        });
+    </script>
     <style>
-        html, body {
+        html, body {style type=text/css body{ overflow：scroll；overflow-x：hidden；} /style;
             height: 100%
         }
 
