--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         });
     </script>
     <style>
-        html, body {style type=text/css body{ overflow：scroll；overflow-x：hidden；} /style;
-            height: 100%
+       html, body {
+            height: 100%;
         }
 
         body, * {
