--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <html style="font-size: 47.9px;"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -207,6 +208,9 @@
             text-align: center;
             margin-bottom: -10px;
         }
+     body{
+         min-width: 1280px;
+     }
     </style>
     <script src="/js/flexible.js?ver=1.0.1"></script>
     <script type="text/javascript" src="/js/iscroll.min.js?ver=1.0.1"></script>
