--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
     <script src="/js/flexible.js?ver=1.0.1"></script>
     <script type="text/javascript" src="/js/iscroll.min.js?ver=1.0.1"></script>
     <script type="text/javascript" src="/js/iscroll-zoom.min.js?ver=1.0.1"></script>
+    <meta name="viewport"content="width=device-width,user-scalable=yes,initial-scale=0.3,maxmum-scale=1.0,minimum-scale=0.3">
 </head>
 <body onload="loadedjs()" style="font-size: 12px;">
 <div id="wrapper">
