--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         });
     </script>
     <style>
-       html, body {
+      <head>
+<meta name="viewport"content="width=device-width,user-scalable=yes,initial-scale=0.3,maxmum-scale=1.0,minimum-scale=0.3">
+</head>
+        html, body {
             height: 100%;
         }
 
@@ -211,8 +214,7 @@
     <script src="/js/flexible.js?ver=1.0.1"></script>
     <script type="text/javascript" src="/js/iscroll.min.js?ver=1.0.1"></script>
     <script type="text/javascript" src="/js/iscroll-zoom.min.js?ver=1.0.1"></script>
-    <meta name="viewport"content="width=device-width,user-scalable=yes,initial-scale=0.3,maxmum-scale=1.0,minimum-scale=0.3">
-</head>
+  </head>
 <body onload="loadedjs()" style="font-size: 12px;">
 <div id="wrapper">
     <div id="scroller" style="transform-origin: 0px 0px; transition-timing-function: cubic-bezier(0.1, 0.57, 0.1, 1); transition-duration: 0ms; transform: translate(0px, 0px) scale(1) translateZ(0px);">
