--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>新奥062期</title>
     <style>
         html, body {
+            overflow-y: scroll;
             height: 100%;
         }
 
