--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>新奥062期</title>
     <style>
         html, body {
-            overflow-y: scroll;
             height: 100%;
         }
 
@@ -32,7 +31,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden;
+            overflow:y:scroll;
             background: #ffffff;
             background-size: contain
         }
